force-app/main/default/objects/CadastroTaxas__c/CadastroTaxas__c.object-meta.xml
<CustomObject>
    <label>Cadastro de Taxa</label>
    <nameField>
        <displayFormat>NDC-{0000}</displayFormat>
        <label>Nome do Cadastro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cadastro de Taxas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>