force-app/main/default/objects/CadastroTaxas__c/fields/PrazoMaximo__c.field-meta.xml
<CustomField>
    <fullName>PrazoMaximo__c</fullName>
    <inlineHelpText>Prazo máximo em meses.</inlineHelpText>
    <label>Prazo Máximo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>