force-app/main/default/objects/CadastroTaxas__c/fields/PrazoMinimo__c.field-meta.xml
<CustomField>
    <fullName>PrazoMinimo__c</fullName>
    <inlineHelpText>Prazo mínimo em meses.</inlineHelpText>
    <label>Prazo Mínimo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>