force-app/main/default/objects/CadastroTaxas__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Produto que será cadastrada a taxa</inlineHelpText>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cadastro de Taxas</relationshipLabel>
    <relationshipName>CadastroTaxas</relationshipName>
    <type>Lookup</type>
</CustomField>