force-app/main/default/objects/CadastroTaxas__c/fields/QtdeMinima__c.field-meta.xml
<CustomField>
    <fullName>QtdeMinima__c</fullName>
    <inlineHelpText>Informar a quantidade mínima para o produto.</inlineHelpText>
    <label>Qtde Mínima</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>