force-app/main/default/objects/CadastroTaxas__c/fields/TaxaMaxima__c.field-meta.xml
<CustomField>
    <fullName>TaxaMaxima__c</fullName>
    <label>Taxa Máxima</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>