force-app/main/default/objects/CadastroTaxas__c/fields/TaxaMinima__c.field-meta.xml
<CustomField>
    <fullName>TaxaMinima__c</fullName>
    <label>Taxa Mínima</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>