force-app/main/default/objects/CadastroTaxas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Produto__c</columns>
    <columns>Funcionario__c</columns>
    <columns>Comissionado__c</columns>
    <columns>Ativo__c</columns>
    <columns>TaxaMinima__c</columns>
    <columns>TaxaMaxima__c</columns>
    <columns>PrazoMinimo__c</columns>
    <columns>PrazoMaximo__c</columns>
    <columns>QtdeMinima__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>